# Ztellar-Edge

./: .gitignore  PRD.md  README.md
circuits/: package-lock.json  package.json  tier_proof.circom
circuits/scripts/: compile.sh  setup.sh  test_input.json  test_proof.js  test_proof.json  test_public.json  verify_test.js
contracts/: Cargo.toml
contracts/scripts/: deploy.sh  deploy_circle_vault.js  deploy_sip.js  deploy_tusdc_vault.js  init_and_wire.js  init_verifier.js  migrate_to_sac_usdc.js  price_oracle.js  redeploy_vault.js  redeploy_verifier.js
contracts/synth_sip/: Cargo.toml
contracts/synth_sip/src/: lib.rs
contracts/synth_token/: Cargo.toml
contracts/synth_token/src/: lib.rs
contracts/synth_vault/: Cargo.toml
contracts/synth_vault/src/: lib.rs
contracts/tier_manager/: Cargo.toml
contracts/tier_manager/src/: lib.rs
contracts/zk_verifier/: Cargo.toml
contracts/zk_verifier/src/: lib.rs
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/portfolio/: page.tsx
frontend/app/positions/: page.tsx
frontend/app/prove/: page.tsx
frontend/app/sip/: page.tsx
frontend/app/trade/: page.tsx
frontend/components/app/: app-nav.tsx
frontend/components/dashboard/: candlestick-chart.tsx  dashboard-nav.tsx  markets-panel.tsx  position-card.tsx  (+5 more)
frontend/hooks/: use-freighter.ts  use-positions.ts  use-prices.ts  use-sip.ts  use-tier.ts  use-usdc-balance.ts
frontend/lib/: contracts.ts  market-hours.ts  stellar.ts  trade-history.ts  utils.ts
frontend/types/: snarkjs.d.ts
(+32 files in other folders)
